<resources>
    <string name="app_name"> Mahalaxmi Petroleums </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="prop">Proprietor: Ravuri Manimala</string>
    <string name="add">Mahalaxmi Petroleums is a\nRetail Outlet of Nayara Energy Ltd \nChiantalapalem, SH-65, Cumbum-B.Pet </string>
    <string name="dev">App Dev: Bogineni Siva Prasad \nwww.about.me/bogineni </string>


    <string name="clearBtn">CLEAR</string>
    <string name="calcBtn">Calculate</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example Tab settings -->
    <string name="pref_header_tab">Tab Preferences</string>
    <string name="pref_switch1_title">Dip to Volume</string>
    <string name="pref_switch1_summary">Hide or Show I-O tab in the application</string>

    <string name="pref_switch2_title">Volume to Dip</string>
    <string name="pref_switch2_summary">Hide or Show O-I tab in the application</string>

    <string name="pref_switch3_title">Temperature - Density </string>
    <string name="pref_switch3_summary">Hide or Show T-D tab in the application</string>

    <string name="pref_switch4_title">Denomination</string>
    <string name="pref_switch4_summary">Hide or Show DENOM tab in the application</string>

    <string name="pref_switch5_title">Bill</string>
    <string name="pref_switch5_summary">Hide or Show BILL tab in the application</string>

    <!-- Example General settings -->

        <string name="pref_header_general">General</string>
    <string name="blank_page">Mahalaxmi Petroleums\nThis page is under construction</string>
    <!--
            <string name="pref_title_social_recommendations">Enable social recommendations</string>
            <string name="pref_description_social_recommendations">Recommendations for people to contact
                based on your message history
            </string>

            <string name="pref_title_display_name">Display name</string>
            <string name="pref_default_display_name">John Smith</string>

            <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
            <string-array name="pref_example_list_titles">
                <item>Always</item>
                <item>When possible</item>
                <item>Never</item>
            </string-array>
            <string-array name="pref_example_list_values">
                <item>1</item>
                <item>0</item>
                <item>-1</item>
            </string-array>
    -->
    <!-- Example settings for Data & Sync -->


    <string name="pref_header_data_sync">Data &amp; sync</string>
    <!--
        <string name="pref_title_sync_frequency">Sync frequency</string>
        <string-array name="pref_sync_frequency_titles">
            <item>15 minutes</item>
            <item>30 minutes</item>
            <item>1 hour</item>
            <item>3 hours</item>
            <item>6 hours</item>
            <item>Never</item>
        </string-array>
        <string-array name="pref_sync_frequency_values">
            <item>15</item>
            <item>30</item>
            <item>60</item>
            <item>180</item>
            <item>360</item>
            <item>-1</item>
        </string-array>

        <string-array name="list_preference_entries">
            <item>Entry 1</item>
            <item>Entry 2</item>
            <item>Entry 3</item>
        </string-array>

        <string-array name="list_preference_entry_values">
            <item>1</item>
            <item>2</item>
            <item>3</item>
        </string-array>

        <string-array name="multi_select_list_preference_default_value" />

        <string name="pref_title_system_sync_settings">System sync settings</string>
    -->
    <!-- Example settings for Notifications -->

    <string name="pref_header_notifications">Notifications</string>
    <!--
        <string name="pref_title_new_message_notifications">New message notifications</string>

        <string name="pref_title_ringtone">Ringtone</string>
        <string name="pref_ringtone_silent">Silent</string>

        <string name="pref_title_vibrate">Vibrate</string>
    -->
</resources>
