<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:text="" />

                <TextView
                    android:id="@+id/textView01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:text="" />

                <TextView
                    android:id="@+id/textView03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prop" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:text="" />


                <TextView
                    android:id="@+id/textView04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dev" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:text="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Dimensions of the tanks used for calculations " />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:text="Tanks "
                                android:textStyle="bold" />

                            <TextView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:text="Length "
                                android:textStyle="bold" />

                            <TextView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:text="Diameter "
                                android:textStyle="bold" />

                        </TableRow>


                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView21"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:text="HSD" />

                            <TextView
                                android:id="@+id/textView22"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".4"
                                android:text="6810 mm" />

                            <TextView
                                android:id="@+id/textView23"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".4"
                                android:text="2438 mm" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView31"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:text="MS" />

                            <TextView
                                android:id="@+id/textView32"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:text="6804 mm" />

                            <TextView
                                android:id="@+id/textView33"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:text="1998 mm" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </TableLayout>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>